--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,18 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1" />
   <!-- <link rel="stylesheet" href=""> -->
+
+  <meta property="og:title" content="Event-App" />
+  <meta name="image" property="og:image" content="/cool-event.PNG" />
+  <meta property="og:description" content="Event-App is an app for hosting events based on Eventbrite. 
+      The user is welcome to browse, join and host events with Event-App. 
+      Discover events that match your passions!. The app is implemented using JavaScript,
+       postgresSQL on the backend and React, CSS, HTML and MaterialUi on the frontend
+        " />
+  <meta property="og:image:type" content="image/PNG" />
+  <meta property="og:image:width" content="200" />
+  <meta property="og:image:height" content="200" />
+
   <title>Event-App</title>
 </head>
 
